<resources>
    <string name="app_name">Despertador_MedTime</string>
    <string name="title_login">Login e Cadastro</string>
    <string name="title_tela_1">Tela 1 - Criar Despertador</string>
    <string name="title_tela_2">Tela 2 - Horarios Agendados</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_senha">Senha</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="msg_login_sucesso">Login realizado.</string>
    <string name="msg_cadastro_sucesso">Cadastro realizado.</string>
    <string name="label_data">Dia selecionado: %1$s</string>
    <string name="label_horario">Horario selecionado: %1$s</string>
    <string name="btn_escolher_data">Escolher dia</string>
    <string name="btn_escolher_horario">Escolher horario</string>
    <string name="btn_salvar_despertador">Salvar despertador</string>
    <string name="btn_importar_json">Importar agendamentos JSON</string>
    <string name="btn_ir_tela_2">Ir para Tela 2</string>
    <string name="btn_ir_tela_1">Ir para Tela 1</string>
    <string name="hint_descricao">Descricao do despertador</string>
    <string name="btn_anexar_imagem">Anexar imagem</string>
    <string name="msg_campo_descricao">Preencha a descricao.</string>
    <string name="msg_data_hora_obrigatorio">Selecione dia e horario.</string>
    <string name="msg_horario_passado">Escolha um horario futuro.</string>
    <string name="msg_sem_permissao_alarme">Permita alarmes exatos para disparar no horario.</string>
    <string name="msg_erro_anexar_imagem">Nao foi possivel anexar a imagem.</string>
    <string name="msg_despertador_salvo">Despertador salvo.</string>
    <string name="msg_json_vazio">Arquivo JSON vazio.</string>
    <string name="msg_json_invalido">JSON invalido para importacao.</string>
    <string name="msg_importacao_json_resultado">Importacao concluida. Agendados: %1$d | Ignorados: %2$d</string>
    <string name="sem_agendamentos">Nenhum horario agendado ainda.</string>
    <string name="alarm_ringing_title">Despertador tocando</string>
    <string name="alarm_ringing_info">Dia: %1$s\nHora: %2$s\nDescricao: %3$s</string>
    <string name="btn_desligar_alarme">Desligar despertador</string>
    <string name="cd_imagem_selecionada">Imagem selecionada para o alarme</string>
    <string name="cd_sem_imagem_selecionada">Nenhuma imagem selecionada</string>
    <string name="cd_imagem_alarme">Imagem anexada ao alarme</string>
    <string name="cd_sem_imagem_alarme">Alarme sem imagem anexada</string>
</resources>